Add note on currency & more on VIII

--- a/ch4/4h.tex
+++ b/ch4/4h.tex
@@ -13,3 +13,13 @@ Marta goes to buy a little firewood and some food, but her daughter refuses to e
 
 The following day, Marta swallows her pride and goes to the sewing parlor of Mrs.\ Szwejcowa to ask for her job back.
 Mrs.\ Szwejcowa, not surprised to see Marta again, refuses to accept her and explains that she has already hired a young seamstress in her place.
+
+On the way home, Marta notices a jewelry shop.
+She enters to sell her wedding ring and notices a few young men working on jewelry: a few working with metal as apprentice jewelers, and one young man drawing designs for new jewelry.
+She realizes that even though her drawing skills may not be sufficient to work as an illustrator, they may be more than enough for designing jewelry.
+When the designer leaves his desk for a while, she sits down and draws a bracelet.
+Finally, the jeweler admits that she is qualified for this job, especially because she offers to work for half the young man's salary.
+However, the jeweler refuses to hire her, explaining that it is unseemly to appoint women for this type of work.
+He pays her half a rouble above the actual price of her wedding ring.
+
+Marta is too exhausted to buy groceries or firewood on her way home.
