--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -134,3 +134,13 @@ She manages to get a job as a seamstress, which she soon quits due to a conflict
 Her little daughter falls ill with bronchitis.
 Marta is compelled to return the rudimentary furniture that she rented for her tiny apartment.
 Finally, a horse-drawn omnibus runs over Marta and she dies on the spot.
+
+\section{Note on currency in Russian Poland}
+
+At the time when the novel \textit{Marta} takes place, Warsaw was located in a political entity officially named ,,Kingdom of Poland'' (Russian: Царство Польское% add transcription
+, Polish: Królestwo Polskie).
+This polity was created by the 1815 Congress of Vienna and controlled by the Russian Empire.
+It is ofter referred to as ,,Congress Poland'' (Polish: \textit{Królestwo Kongresowe}, lit. `Congress Kindgom').
+The monetary system used in Congress Poland was based on gold and silver, and before the January Uprising, rouble coins minted in the Kingdom of Poland used bilingual denominations, with the traditional Polish currency name, \textit{zloty} (Polish: złoty, `golden') equivalent to 15 Russian kopeks (Russian: копейка, Polish: \textit{kopiejka}), i.\ e.\ $15/100$ of a Russian rouble.
+After the January Uprising, Polish denominations were removed from the coins, but the conversion rate was still in common usage among the local populace.
+Therefore, both currency names are mentioned throughout the source text.
