Add description of IX

--- a/ch4/4h.tex
+++ b/ch4/4h.tex
@@ -8,7 +8,7 @@ Left with no way to earn a livelihood, Marta regrets her resignation from the me
 With only one złoty left to her name, Marta goes to the bookstore to ask for help.
 The owner advises her to look for housekeeping work at his friends' household, and gives her a letter of recommendation.
 The family, although in fact in need of a housekeeper, send her away, thinking that such a delicate woman would not be able to work well, and afraid to also take her daughter.
-Feeling sorry to send her away, they give her a rouble. % write about currency
+Feeling sorry to send her away, they give her a rouble.
 Marta goes to buy a little firewood and some food, but her daughter refuses to eat and falls asleep, showing early symptoms of illness.
 
 The following day, Marta swallows her pride and goes to the sewing parlor of Mrs.\ Szwejcowa to ask for her job back.
@@ -23,3 +23,12 @@ However, the jeweler refuses to hire her, explaining that it is unseemly to appo
 He pays her half a rouble above the actual price of her wedding ring.
 
 Marta is too exhausted to buy groceries or firewood on her way home.
+She goes to sleep, but finds herself wide awake when she hears the loud cough of her daughter, Jancia.
+Marta realizes that her daughter has a fever.
+In the middle of the night, she runs to find a doctor, who diagnoses Jancia with bronchitis.
+Seeing their extreme poverty, he does not accept any money, and asks Marta to heat up their attic and to give Jancia medicine.
+
+After ten days of Jancia's illness, Marta has no money left to buy firewood or medicine.
+She begs the wife of the caretaker of their edifice to keep watch at her daughter's bed and goes out to beg for help.
+She goes to Mrs.\ Rudzińska's apartment to ask her for help, but the servant of Mr.\ and Mrs.\ Rudziński tells her that the Mistress is currently holding a party and cannot leave the living room.
+Afterwards, she goes to the bookstore in Krakowskie Przedmieście, but there, too, she cannot go in, seeing several elegant people buying books.
