--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -15,3 +15,4 @@ In the process, it should be possible to identify parts of the translation where
 \input{ch4/4f}
 \input{ch4/4g}
 \input{ch4/4h}
+\input{ch4/4i}
