Fix typos and update paragraph layout

--- a/ch4/4i.tex
+++ b/ch4/4i.tex
@@ -8,7 +8,8 @@ Marta, not having any experience in begging, only manages to ask one man for mon
 
 Marta stands in front of a store, waiting for a wealthy man inside to walk out.
 She asks the man for some money to buy medicine for her daughter.
-``Milady,'' the man responds. ''Aren't you ashamed to beg? You are young and healthy, you can work!''
+``Milady,'' the man responds. ``Aren't you ashamed to beg? You are young and healthy, you can work!''
+
 She waits for the man to pull out some money from his pocket and then steals a three-rouble bill.
 The shopkeeper asks a policeman standing nearby to catch the woman who stole money from his customer.
 The wealthy man merely laughs, not considering the loss to be worth such prosecution.
