Add info about chapter numbering, first build on Dell

--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -120,10 +120,12 @@ Other Chinese-language writings and websites use other variations, based on the 
 These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the form ``Eliza Orzeszkowa'' shall be used, being the most prevalent in Polish-language writings.
 
 \section{Plot outline of the novel \textit{Marta}}
-The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
-The story is told from the point of view of a third-person omniscient narrator.
+The version of the novel \textit{Marta} available at Wikisources is based on a 1907 edition published in Lwów (nowadays Lviv, Ukraine) and Złoczów (nowadays Zolochiv, Ukraine) by the Bookstore of Wilhelm Zukerkandl (Polish: \textit{Księgarnia Wilhelma Zukerkandla}).
+This edition is divided into an introduction and nine chapters numbered with Roman numerals (from I to IX).
+This numeration is not present in the Esperanto translation, which is only available as a continuous text.
 
 The novel \textit{Marta} tells the tragical story of a certain Marta Świcka.
+The story is told from the point of view of a third-person omniscient narrator.
 In the beginning of the novel, Marta is presented as an impoverished, twenty-odd-year-old lady whose affluent husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
 Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw to a plain, dilapidated, single room.
 
