Add more information on chapter I translation

--- a/ch4/4a.tex
+++ b/ch4/4a.tex
@@ -1,17 +1,18 @@
-\section{Analysis of chapter one}
+\section{Analysis of chapter I}
 
-The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
+This section describes the comparative analysis of chapter I, as delimited in the source text, and the corresponding part of the target text.
 
 \subsection{Summary of the plot of chapter one}
-Mrs.\ Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to what is now a public park called Saxon Garden---into a single small room in the attic of a much humbler edifice in Piwna street, in the Old Town.
-The woman, who has never worked for money in her life, needs to find a job to support herself and her four-year-old daughter.
+The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
+Mrs.\ Świcka, having lost her only supporter, is compelled to move out of a big and comfortable apartment in Graniczna street, into a small, single room in the attic of a much humbler edifice in Piwna street, in the Old Town.
+The woman, who has never needed to work for money in her life, needs to find a job to support herself and her four-year-old daughter.
 
 The chapter starts by presenting the circumstances in which the protagonist leaves her old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished and incomplete family can no longer afford.
 After all furniture and belongings have been taken away, Marta goes to her new rented room.
 On the way, she is accompanied by her daughter and her former servant girl, Zofia, which subsequently leaves for her new masters' place.
 
 The chapter continues with a description of the protagonist's nightly errand to buy food for her child, in an atmosphere of fear and uncertainty.
-It is the first time when she needs to go outside on her own at night.
+It is the first time she needs to go outside on her own at night.
 Afraid to leave, she encounters two people, the caretaker of her edifice, and a woman whom she guessed to be the caretaker's wife.
 She pleads both of them to run the errand for her, but both refuse, seeing the widow's poor financial condition.
 Finally, the protagonist goes to a shop to buy food, overcoming her fears.
@@ -19,30 +20,42 @@ On the way home, she is approached by a stranger humming a frivolous song, who s
 In spite of all the perils, she manages to return home to her daughter, make tea, and put her daughter to sleep.
 The chapter ends with the protagonist sitting at the fireplace and thinking about her new way of life.
 
-\subsection{Analysis of the language of the Esperanto translation}
-
+\subsection{General appraisal of the translation of chapter I}
 In this part of the translation, Zamenhof managed to preserve both the precise meaning of most of the words and their literary value. The text is easy to read and understand for a reader versed in Esperanto.
 
 There are, however, slight omissions and changes which do modify the perception of the translation.
 An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO: Are all of them left in Polish?
-The name ``Graniczna'' means ``[the street] at the boundary,'' and has been rendered phonetically in the Chinese translation as Gelanazhina Street (格拉納支納街 \pinyin{Gélānàzhīnà jiē}) which not only does not convey any meaning, but is also a mispronunciation of the Polish name, which is pronounced \ipa{[ɡrãˈɲiʧ̑na]}.
+As a result, the name ``ulica Graniczna'' (lit. `[the street] at the boundary'), has been rendered phonetically in the Chinese translation as Gelanazhina Street (格拉納支納街 \pinyin{Gélānàzhīnà jiē}) which not only does not convey any meaning, but is also a mispronunciation of the Polish name%
+\footnote{This word is pronounced \ipa{[ɡrãˈɲiʧ̑na]}, so a closer rendition into Chinese would be Gelanizhina Street (格拉尼支納街 \pinyin{Gēlānízhīnà jiē}).}.
 while the name ``Piwna'' means ``the beer street.''
-Although the meanings of those names do not really bring any added value to the story, one could argue that a phonetic rendition does result in a loss of meaning.
+One could argue that the meanings of those names do not really add any value to the story, but at least in the case of street names, a phonetic rendition does result in a loss of meaning.
 
---- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
-
---- Panjo! --- mallaŭte diris la knabineto, --- la skribtablo de la patro!
-
-\begin{displayquote}
-Znać było, że przedmioty te, z którymi \textbf{rozstawała się widocznie}, posiadały dla niej nie tylko materialną cenę;
-\end{displayquote}
-
-\begin{displayquote}
-Oni povis rimarki, ke tiuj objektoj, kiuj \textbf{videble estis forprenataj de ŝi}, havis por ŝi valoron ne sole materialan;
-\end{displayquote}
-
+\subsection{Specific differences between texts}
 In the whole section, the Polish verb \textit{szeptać} (`to whisper') is always translated into Esperanto as \textit{mallaŭte paroli} (`to speak quietly').
+
+\begin{displayquote}
+--- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
+\end{displayquote}
+
+\begin{displayquote}
+--- Panjo! --- mallaŭte diris la knabineto, --- la skribtablo de la patro!
+\end{displayquote}
+
 Both expressions convey similar meaning and though not fully equivalent, this change is unlikely to result in mistranslations in the Chinese text.
+
+In the following passage, a phrase using an active verb is restructured into passive voice:
+
+\begin{displayquote}
+Znać było, że przedmioty te, \textbf{z którymi rozstawała się widocznie}, posiadały dla niej nie tylko materialną cenę;
+\end{displayquote}
+
+It was apparent that these objects, \textbf{with which she was visibly parting}, possesed for her not only material price;
+
+\begin{displayquote}
+Oni povis rimarki, ke tiuj objektoj, \textbf{kiuj videble estis forprenataj de ŝi}, havis por ŝi valoron ne sole materialan;
+\end{displayquote}
+
+One could notice that these objects, \textbf{which visibly were being taken away from her}, possesed for her not only material price;
 
 \subsection{Omissions}
 
@@ -53,13 +66,17 @@ This sentence describes the grand piano that Marta had to sell:
 Po biurku ukazał się na dziedzińcu \textbf{ładny kralowski fortepian}, ale kobieta w żałobie obojętniej już za nim wzrokiem powiodła.
 \end{displayquote}
 
+After the desk, in the courtyard appeared \textbf{a good-looking Krall \& Seider grand piano}, but the woman in a mourning dress followed it with her eyes more indifferently.
+
 In the translation, the expression \textit{ładny kralowski fortepian} (`a good-looking grand piano made by the company Krall \& Seider') has been translated as \textit{bela fortepiano} (`a beautiful grand piano'), omitting the indication of origin altogether:
 
 \begin{displayquote}
 Post la skribtablo aperis sur la korto \textbf{bela fortepiano}, sed la virino en funebra vesto akompanis ĝin jam per rigardo pli indiferenta.
 \end{displayquote}
 
-The said company was a popular maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
+After the desk appeared in the courtyard \textbf{a good-looking grand piano}, but the woman in a mourning dress followed it with a more indifferent glance.
+
+Krall i Seider was a maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
 Therefore, the omission seems reasonable and was not likely to result in mistranslations.
 
 When Marta's daughter notices her bed being taken away, she shouts out in dismay:
