--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -1,10 +1,11 @@
 \chapter{Comparison of \textit{Marta} in Polish and Esperanto}
 
 This chapter makes an attempt to describe the contents of the Polish source text of the novel \textit{Marta} and compare it with Ludwik Zamenhof's Esperanto translation.
-
-In this chapter, unless otherwise noted, the acronym ST (Source Text) will be used to refer to the Polish text, and the acronym TT (Target Text) will be used to refer to the Esperanto translation by Zamenhof.
-Each chapter of the ST will be summarized and through comparison with the corresponding fragment in the TT, the author
+Each chapter of the source text will be summarized and its content compared with the corresponding fragment in the target text.
 In the process, it should be possible to identify parts of the translation where equivalence could not be achieved and try to describe the way Zamenhof dealt with these issues in the process of his translation work.
+
+Throughout this chapter, unless otherwise noted, the term \textit{source text} and the corresponding acronym ST will be used to refer to Orzeszkowa (1907), i. e. the Polish text of the Zukerkandl edition, as published on Wikisources.
+The term \textit{target text} and the corresponding acronym TT will be used to refer to the Esperanto translation by Zamenhof.
 
 \input{ch4/intro}
 \input{ch4/4a}
