--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -108,8 +108,8 @@ Eliza Orzeszkowa died in Grodno in 1910 and was buried at the local Catholic cem
 In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
 For instance, the wife of the well-known Polish poet of the Romanticist period, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
 Analogously, in case of the name ``Eliza Orzeszkowa,'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English form ``Mrs. Piotr Orzeszko.''
-In modern-day Polish, however, this convention is virtually obsolete.
-All family members use the same form of the name, and the wife of \textit{Pan Orzeszko} (Mr. Orzeszko) can be called \textit{Pani Orzeszko} (Mrs. Orzeszko).
+In modern-day Polish, however, this convention is virtually obsolete and is not reflected in official documents.
+All family members use the same form of the name, and the wife of \textit{Pan Orzeszko} (Mr.\ Orzeszko) can be called \textit{Pani Orzeszko} (Mrs. Orzeszko).
 A notable exception to this rule are the surnames ending in \textit{-ski} or similar suffixes, such as Kowalski, Górecki, Grodzki.
 These surnames have evolved from adjectives and still follow all the grammar rules pertaining to adjectives.
 Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalski, would still use the form \textit{Kowalska}. 
@@ -127,7 +127,7 @@ This numeration is not present in the Esperanto translation, which is only avail
 The novel \textit{Marta} tells the tragical story of a certain Marta Świcka.
 The story is told from the point of view of a third-person omniscient narrator.
 In the beginning of the novel, Marta is presented as an impoverished, twenty-odd-year-old lady whose affluent husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
-Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw to a plain, dilapidated, single room.
+Due to these unfavorable circumstances, she is compelled to move out of their comfortable apartment in Warsaw to a plain, dilapidated, single room.
 
 Throughout the novel, the protagonist struggles to find a job to provide for herself and her little daughter.
 At first, she tries her luck as a teacher of French and piano, but soon finds out that the little qualifications she has are not sufficient for her to make ends meet.
@@ -139,8 +139,7 @@ Finally, a horse-drawn omnibus runs over Marta and she dies on the spot.
 
 \section{Note on currency in Russian Poland}
 
-At the time when the novel \textit{Marta} takes place, Warsaw was located in a political entity officially named ,,Kingdom of Poland'' (Russian: Царство Польское% add transcription
-, Polish: Królestwo Polskie).
+At the time when the novel \textit{Marta} takes place, Warsaw was located in a political entity officially named ,,Kingdom of Poland'' (Russian: {\cyrfont Царство Польское} \textit{Tsarstvo Pol'skoye}, Polish: \textit{Królestwo Polskie}).
 This polity was created by the 1815 Congress of Vienna and controlled by the Russian Empire.
 It is ofter referred to as ,,Congress Poland'' (Polish: \textit{Królestwo Kongresowe}, lit. `Congress Kindgom').
 The monetary system used in Congress Poland was based on gold and silver, and before the January Uprising, rouble coins minted in the Kingdom of Poland used bilingual denominations, with the traditional Polish currency name, \textit{zloty} (Polish: złoty, `golden') equivalent to 15 Russian kopeks (Russian: копейка, Polish: \textit{kopiejka}), i.\ e.\ $15/100$ of a Russian rouble.
