--- a/references.tex
+++ b/references.tex
@@ -24,9 +24,9 @@ Gau H. (2014). \textit{A Study of “Quo Vadis” by Henryk Sienkiewicz in Chine
 
 Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
 
-Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
+Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto} [Encyclopedia of Esperanto]. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
-Krasicki I. \textit{Dzieci i żaby}. Retrieved November 26th, 2021, from \url{https://wolnelektury.pl/katalog/lektura/dzieci-i-zaby-bajki-nowe.html}.
+Krasicki I. \textit{Dzieci i żaby} [Children and frogs]. Retrieved November 26th, 2021, from \url{https://wolnelektury.pl/katalog/lektura/dzieci-i-zaby-bajki-nowe.html}.
 
 % Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
@@ -38,7 +38,11 @@ Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and th
 
 Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key Sino-English Linguistic Terms. \textit{Sino-Platonic Papers}, 29. Retrieved March 23th, 2020, from \url{http://sino-platonic.org/complete/spp029_chinese_dialect.pdf}.
 
+Museum of Art in Łódź. \textit{Fortepian Krall i Seider} [Krall \& Seider Grand piano]. Retrieved December 12th, 2021, from \url{https://zasoby.msl.org.pl/arts/view/2053?&page_art=4}.
+
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
+
+Orzeszkowa, E. (1907). \textit{Marta}. Lwów and Złoczów, Poland: Księgarnia Wilhelma Zukerkandla. Retrieved December 12th, 2021, from \url{https://pl.wikisource.org/wiki/Marta}.
 
 Orzeszkowa, E. (2001). \textit{Marta}. L. L. Zamenhof (Trans.). Tyresö: Inko.
 
