Refactor chapter I analysis

--- a/ch4/4a.tex
+++ b/ch4/4a.tex
@@ -77,7 +77,7 @@ Post la skribtablo aperis sur la korto \textbf{bela fortepiano}, sed la virino e
 After the desk appeared in the courtyard \textbf{a good-looking grand piano}, but the woman in a mourning dress followed it with a more indifferent glance.
 
 Krall i Seider was a maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
-Therefore, the omission seems reasonable and was not likely to result in mistranslations.
+Therefore, the omission seems reasonable and was not likely to result in mistranslations (Museum of Art in Łódź).
 
 When Marta's daughter notices her bed being taken away, she shouts out in dismay:
 
@@ -85,11 +85,15 @@ When Marta's daughter notices her bed being taken away, she shouts out in dismay
 --- Łóżeczko moje, mamo! --- zawołała dziewczynka --- ludzie ci i łóżeczko moje zabierają, i tę kołderkę, którąś mi sama zrobiła! \textbf{Ja nie chcę, aby oni to zabierali!} Odbierz, mamo, od nich łóżeczko moje i kołderkę.
 \end{displayquote}
 
+``My little bed, mom!'' shouted the little girl. ``Those people are even taking my little bed, and the little quilt that you made for me yourself! I don't want them to take it away! Mom, take back my little bed and my little quilt from them.''
+
 In the translation, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether:
 
 \begin{displayquote}
 --- Mia liteto, panjo! --- ekkriis la knabineto --- tiuj homoj forprenas ankaŭ mian liteton, kaj ankaŭ tiun kovrileton, kiun vi mem al mi faris! Reprenu, panjo, de ili mian liteton kaj la kovrileton.
 \end{displayquote}
+
+``My little bed, mom!'' shouted the little girl. ``Those people are even taking away my little bed, and also that little quilt which you made for me yourself. Mom, take back from them my little bed and my little quilt.''
 
 \subsection{Nativization of given names, archaisms, and bad grammar}
 
@@ -101,7 +105,7 @@ Let us take a look at the parting words that the protagonist, Marta, exchanged w
 --- \textbf{Pani} to \textbf{byłaś} zawsze dobrą dla mnie --- zawołała dziewczyna --- służyłam u pani cztery lata i nigdzie nie było mi i nie będzie już \textbf{lepiej jak u pani}.
 \end{displayquote}
 
-These words were thus rendered in the Esperanto translation:
+These words were thus rendered in the target text:
 
 \begin{displayquote}
 --- Mi dankas vin, \textbf{Sonjo}, ŝi diris mallaŭte, --- vi estis por mi tre bona.
@@ -110,19 +114,21 @@ These words were thus rendered in the Esperanto translation:
 \end{displayquote}
 
 In the source text, the protagonist calls the maiden ``Zosia,'' which is a diminutive form of the name Zofia.
-Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo,'' which is the Esperanto spelling of ``Sonja,'' the diminutive form of the Russian name ``Sofia.''
+Although there is no clear rule regarding the forming of diminutive forms of names in Esperanto, Zamenhof nativized the name as ``Sonjo,'' a cognate of Russian \textit{Sonya} (Russian: Соня), which in turn is the diminutive form of the name \textit{Sofiya} (Russian: София).
+This is in line with other common diminutives, such as Panjo (`Mommy', diminutive form of \textit{patrino} `mother') and Pa\^cjo (`Daddy', diminutive form of \textit{patro} `father').
+Such a rendition of the name is as close as one can get when nativising this particular name.
 
 % ``Thank you, Sophie,'' she said quietly, ``you have been very good to me.''
 
 % ``Milady, you have always been good to me,'' cried the maiden, ``I have served you for four years, and nowhere has ever been, nowhere will ever be better than with you.''
 
-Another thing worth noticing in this fragment, as well as many other places throughout the source text, is that the dialogues contain archaic forms and grammar that would be considered incorrect in modern Polish. % Znaleźć źródło!
+Another thing worth noticing in this fragment, as well as many other places throughout the source text, is that the source text contains archaic and regional grammar and vocabulary that would be considered incorrect in modern Polish. % Znaleźć źródło!
 For instance, according to the rules of modern Polish grammar, when using the honorific form \textit{Pani} (`Milady; Mistress; Madam') or \textit{Pan} (`Sir; Mister'), the verb should be conjugated in the third person singular form (as in: \textit{Pani była}).
 In the source text, however, the second person singular is used (\textit{Pani byłaś}).
 Zosia, the maiden, uses the conjunction % sprawdzić, co to za część mowy
 \textit{jak} (`as; how') in comparisons (\textit{lepiej jak u pani}), rather than \textit{niż} (`than', as in: \textit{lepiej, niż u pani}).
-This is a colloquialism considered incorrect by formal grammar and very common to this day in the spoken language. % źródło
-However, the grammatical rules of Esperanto are few and simple; there is no honorific verb form, and all conjugations take exactly the same form, regardless of the grammatical person.
+Nowadays, this is considered a colloquialism and is incorrect according to formal grammar. % źródło
+However, the grammatical rules of Esperanto are few and simple; there are no honorific forms, and all conjugations take exactly the same form, regardless of the grammatical person.
 In Esperanto, it is simply not possible to translate anything with bad grammar without altering the meaning of a sentence.
 Therefore the translation fails to convey the grammatical mistakes occuring in the speech of the servant girl.
 Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
