Add more content on chapter II and bread rolls

--- a/ch4/4a.tex
+++ b/ch4/4a.tex
@@ -133,4 +133,21 @@ In Esperanto, it is simply not possible to translate anything with bad grammar w
 Therefore the translation fails to convey the grammatical mistakes occuring in the speech of the servant girl.
 Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
 
+\section{Use of Esperanto terms specific to Slavic culture}
 
+It is apparent that Zamenhof's translation work has been facilitated by the existence of specific Esperanto words originating from Slavic culture.
+For instance, at the end of the chapter, Marta tells her daughter that she had brought her some bread rolls and that she would prepare a samovar and make tea:
+
+\begin{displayquote}
+--- Mi alportis al vi bulkojn, Janjo, kaj nun mi preparos la samovaron kaj pretigos teon.
+\end{displayquote}
+
+The word \textit{bulko} (Esperanto: `bread roll') used in this sentence is a cognate of Polish \textit{bułka} and Russian \textit{bulka} ({\cyrfont булка}).
+While the word for `bread', Latin-derived \textit{pano}, appeared in Zamenhof (1887), as part of the translation of \textit{Father's Prayer}, the word for `bread roll' only appeared in the multilingual dictionary in Zamenhof (1905) as:
+
+\begin{displayquote}
+bulk' pain blanc | manchet loaf | Semmel | булка | bułka.
+\end{displayquote}
+
+Bread and bread rolls are a staple food throughout Europe, an everyday object for most early adopters of Esperanto.
+Therefore an Esperanto
