--- a/ch4/4b.tex
+++ b/ch4/4b.tex
@@ -1,20 +1,23 @@
-\section{Analysis of chapter two}
+\section{Analysis of chapter II}
+
+This section analyses and compares the chapter II, as delimited in the source text, and the corresponding part of the target text.
+
 \subsection{Summary of the plot of chapter two}
 
 The second chapter begins with a short biography of the protagonist, providing some background on Marta's origins and her life story preceding the events described in the first chapter.
 
 Marta was born to a loving family of impoverished gentry, and grew up in a relatively quiet, carefree environment.
 When she was sixteen, her mother died.
-Soon after she married a low-ranking government official by the name Jan Świcki, her father died, too.
+Soon after she had married a low-ranking government official by the name Jan Świcki, her father died, too.
 At the time, Marta was not particularly worried by her parents' deaths, as her husband's salary was enough to provide for the whole family.
 A few years after the birth of their only child, Jancia, Mr.\ Świcki fell ill with a disease that would bring about his demise.
 During her husband's disease, Marta spent most of their money and sold off her jewellery to pay doctors and pharmacists.
-In spite of their joint efforts, her husband's life could not be saved, and his death was the direct reason of the events described in the novel.
+In spite of their joint efforts, her husband's life could not be saved, and his premature death resulted in the events described in the novel.
 
 The narrative then follows with the description of Marta's first encounter with the ruthless job market.
-On the next day after Marta's removal from the comfortable apartment in Graniczna street to the cheap attic abode in Piwna street, Marta goes to the office of, Mrs.\ Ludwika Żmińska, a tutoring broker, in an attempt to apply for a job.
+On the next day after Marta's removal from the comfortable apartment in Graniczna street to the cheap attic abode in Piwna street, Marta goes to the office of Mrs.\ Ludwika Żmińska, a tutoring broker, in an attempt to apply for a job.
 At the office, she encounters an English woman and a French woman.
-She witnesses both women being offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions and perks.
+She witnesses both women being offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions and benefits.
 The French woman is even allowed to live with her little niece.
 The broker admits that the French woman does not possess any particular teaching qualifications, but has the benefit of being a foreigner.
 
@@ -25,7 +28,7 @@ Mrs.\ Żmińska admonishes Marta that in their society, the only way a woman cou
 
 The broker, seeing Marta's dire predicament, treats her with compassion and understanding.
 She promises to do her best to help Marta find a tutoring post, while warning her that the search may take a very long time.
-The reason for the delay, she says, is that the supply of entry-level French teachers was far greater than the demand, making it very hard for mediocre tutors to find a reasonably paid, or even any post.
+The reason for the delay, she says, is that the supply of entry-level French teachers was far greater than the demand, making it very hard for mediocre tutors to find a reasonably paid, or even any, job.
 
 The chapter ends with a description of the protagonist's bitter realization of her own low value.
 Before the meeting with Mrs.\ Żmińska, Marta had been confident that the will to work alone was enough for a woman to find a job sufficient to provide for her family.
