--- a/esperanto.tex
+++ b/esperanto.tex
@@ -30,7 +30,7 @@ the suffix \textit{-anto} indicating the gerund form, analogous to such Latin wo
 
 \section{First appearance of Esperanto}
 The language authored by Zamenhof was first described in a book published in the Russian language in 1887 in Warsaw.
-The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
+The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik}
 ({\cyrfont Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ} `The International Language. Introduction and Complete Textbook').
 This book has subsequently been translated into English, Polish, German, and French.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
