--- a/references.tex
+++ b/references.tex
@@ -63,7 +63,11 @@ Stekloff G. M. (1928). \textit{History of The First International}. London, Engl
 
 Universala Esperanto-Asocio. (2019). \textit{Rezolucio de la 104-a Universala Kongreso de Esperanto} [Resolution of the 104th World Esperanto Congress]. Retrieved March 23th, 2020, from \url{https://uea.org/aktuale/komunikoj/2019/Rezolucio-de-la-104-a-Universala-Kongreso-de-Esperanto}.
 
+Zamenhof L. L. (1887). \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik} {\cyrfont Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ} [Dr. Esperanto's International Language. Foreword and full manual]. Retrieved December 12th, 2021, from \url{https://ru.wikisource.org/wiki/Международный_язык_(Заменгоф)}.
+
 Zamenhof L. L. (1904). \textit{The Birth of Esperanto}. Ellis J. (Trans.). Private letter with unknown recipient.
+
+Zamenhof L. L. (1905). \textit{Fundamento de Esperanto} [Foundation of Esperanto]. Retrieved December 12th, 2021, from \url{https://www.akademio-de-esperanto.org/fundamento/index.html}.
 
 Zamenhof L. L. (2006). \textit{Dr. Esperanto's International Language}. Geoghegan, R. H. (Trans.). Berwick, Nova Scotia, Canada. Retrieved March 9th, 2020, from \url{https://en.wikisource.org/wiki/Dr._Esperanto\%27s_International_Language}.
 
